# cg-api

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
cg_api/: __init__.py  configuration.py
