[tool.poetry]
name = "cg-api"
version = "0.1.3"
description = ""
authors = ["Jonas Rosenboom <jzr@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cg_api"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
